Método de escribir archivo con tokens

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JFlex.classpath}:\
-    ${libs.Cup.classpath}
+    ${libs.Cup.classpath}:\
+    ${libs.CUP.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
