--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\gerar\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\pozoj\\AppData\\Roaming\\NetBeans\\24\\build.properties
